# fframes_ios_demo_project

./: .gitignore  BridgingHeader.h  README.md  build-ffmpeg.sh  hello_world.h
fframes_demo/: ContentView.swift  Demo.swift  RustVideoRenderer.swift  fframes_demoApp.swift
fframes_demo.xcodeproj/: project.pbxproj
fframes_demo.xcodeproj/xcuserdata/dmtrkovalenko.xcuserdatad/xcschemes/: xcschememanagement.plist
fframes_demo/components/: MetalCanvasView.swift
fframes_demo/fframes_demoTests/: fframes_demoTests.swift
fframes_demoTests/: fframes_demoTests.swift
fframes_demoUITests/: fframes_demoUITests.swift  fframes_demoUITestsLaunchTests.swift
video/: Cargo.toml  build.rs
video/.cargo/: config.toml
video/editor/: .rsw.json  index.html  main.tsx  package.json  tsconfig.json  vite.config.ts
video/editor/.rsw/paths/: editor-bridge
video/editor/editor-bridge/: Cargo.toml  lib.rs
video/src/: hello_world.h  hello_world.rs  hello_world_multiscene.rs  lib.rs
