[package]
name = "hello-world-example"
version = "1.0.0-beta.1"
edition = "2021"

[dependencies]
fframes = { path = "../../fframes/fframes", features = ["videotoolbox"] }
fframes_skia_renderer = { path = "../../fframes/fframes-skia-renderer", features = [
	"metal",
] }

[features]
default = ["renderer"]
renderer = ["fframes/compile-time-svgtree"]

[lib]
path = "src/lib.rs"
crate-type = ["staticlib"]
