[package]
name = "hello-world-example"
version = "1.0.0-beta.1"
edition = "2021"

[dependencies]
fframes = { version = "=1.0.0-beta.7.rc-22", features = ["videotoolbox"] }
fframes_skia_renderer = { version = "=1.0.0-beta.7.rc-22", features = [
	"metal",
] }

[features]
default = ["renderer"]
renderer = ["fframes/compile-time-svgtree"]

[lib]
path = "src/lib.rs"
crate-type = ["staticlib"]
