[package]
name = "audio-announce-bridge-example"
version = "1.0.0-beta.1"
authors = ["Dmitriy Kovalenko <dmtr.kovalenko@outlook.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
path = "./lib.rs"

[dependencies]
wasm-bindgen = "0.2.74"
fframes-editor-controller = { path = "../../../../fframes-editor-controller" }
hello-world-example = { path = "../../", default-features = false }
